examples/1.2.0/fail/tue-excellent-buildings/bso-toolbox-invalid-date/CITATION.cff
cff-version: 1.2.0
message: If you use this software, please cite it as below.
authors:
  - family-names: Boonstra
    given-names: Sjonnie
    orcid: https://orcid.org/0000-0001-9911-4507
  - family-names: Hofmeyer
    given-names: Hèrm
title: "BSO Toolbox"
version: 1.0
doi: 10.5281/zenodo.3823893
date-released: 2020-05-xx